2009-08-18  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* moon-unit.mdp: Include System.Windows.Automation.Peers/
	  files.

2009-08-18  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: Allocate sizes of
	  the grid segments in the correct order. r: shana

2009-08-17  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: When allocating
	  sizes for rows/columns, clamp the sizes between the Min and
	  Max values in a consistent manner. r: jackson

2009-08-15  Larry Ewing  <lewing@novell.com>

	* System.Windows.Shapes/PathTest.cs: put the Path tests back into
	compliance.

2009-08-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTest.cs:
	* System.Windows.Controls/GridTestAuto.cs: Rewrite the size
	  allocation code in grid to better match the microsoft
	  implementation. It works much better for the pixel and auto
	  cases, but still has some issues with star columns. r:
	  lewing

2009-08-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media.Animation/StoryboardTest.cs: Disable
	  StoryboardTest.Pause () for the moment as it flaps far too
	  frequently. There are other tests on Storyboard.Pause that
	  will fail if it regresses. r: rolf and jackson

2009-08-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Go back to
	  the old method of populating TextBlock.Text in the fallback
	  display element in ContentPresenter. We can't safely use the
	  correct method (a oneway binding) yet. r: lewing

2009-08-13  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: Files added to test ScrollBar and ScrollViewer.
	* System.Windows.Automation.Peers/ItemAutomationPeerTest.cs, 
	  System.Windows.Automation.Peers/ItemsControlAutomationPeerTest.cs: 
	Tests updated to match changes in KB970363.
	* System.Windows.Automation.Peers/SelectorAutomationPeerTest.cs: 
	Subclassing ItemsControlAutomationPeerTest to match hierarchy.